--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
+    "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.9.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
